# src/gen/java/us/filin/helpwanted/api/BuyerApiService.java
@@ -20,6 +20,6 @@ import javax.validation.constraints.*;
 public abstract class BuyerApiService {
     public abstract Response bidBuyerProject(String username,String projectId,BidPOJO body,SecurityContext securityContext) throws NotFoundException;
     public abstract Response bookmarkBuyerProject(String username,String projectId,SecurityContext securityContext) throws NotFoundException;
-    public abstract Response deleteOrder(String username,String projectId,SecurityContext securityContext) throws NotFoundException;
+    public abstract Response deleteBuyerProjectBookmark(String username,String projectId,SecurityContext securityContext) throws NotFoundException;
     public abstract Response getBuyerProject(String username,String projectId,SecurityContext securityContext) throws NotFoundException;
 }
