# src/main/java/us/filin/helpwanted/api/impl/BuyerApiServiceImpl.java
@@ -1,13 +1,21 @@
 package us.filin.helpwanted.api.impl;
 
 import us.filin.helpwanted.api.*;
+import us.filin.helpwanted.pojo.*;
 
 import us.filin.helpwanted.pojo.BidPOJO;
+import us.filin.helpwanted.pojo.ProjectPOJO;
 
+import java.util.List;
 import us.filin.helpwanted.api.NotFoundException;
+
+import java.io.InputStream;
+
+import org.glassfish.jersey.media.multipart.FormDataContentDisposition;
 
 import javax.ws.rs.core.Response;
 import javax.ws.rs.core.SecurityContext;
+import javax.validation.constraints.*;
 
 public class BuyerApiServiceImpl extends BuyerApiService {
     @Override
@@ -21,7 +29,7 @@ public class BuyerApiServiceImpl extends BuyerApiService {
         return Response.ok().entity(new ApiResponseMessage(ApiResponseMessage.OK, "magic!")).build();
     }
     @Override
-    public Response deleteOrder(String username, String projectId, SecurityContext securityContext) throws NotFoundException {
+    public Response deleteBuyerProjectBookmark(String username, String projectId, SecurityContext securityContext) throws NotFoundException {
         // do some magic!
         return Response.ok().entity(new ApiResponseMessage(ApiResponseMessage.OK, "magic!")).build();
     }
