# swagger/swagger.yaml
@@ -1,16 +1,15 @@
 swagger: '2.0'
 info:
   description: >-
-    HelpWanted REST API server implents
-    a Market Place for Self-Employed.    
-    Assume all projects can be done remotely/online. You do not need to worry about matching by location.
-    The Buyer with the lowest bid automatically wins the bid when the deadline is reached.
-    Lowest bid is displayed on the project page. 
-    We have 50K registered Buyers. 
-    On average, 100 projects are posted every day.
-    On average, each project receives 50 bids.
-    On the homepage, we need to show 100 most recent projects. Optionally you can support pagination.
-    You are welcome to assume unspecified requirements to make it better for the customers.
+    HelpWanted REST API server implents a Market Place for Self-Employed.    
+    Assume all projects can be done remotely/online. You do not need to worry
+    about matching by location. The Buyer with the lowest bid automatically wins
+    the bid when the deadline is reached. Lowest bid is displayed on the project
+    page.  We have 50K registered Buyers.  On average, 100 projects are posted
+    every day. On average, each project receives 50 bids. On the homepage, we
+    need to show 100 most recent projects. Optionally you can support
+    pagination. You are welcome to assume unspecified requirements to make it
+    better for the customers.
   version: 1.0.0
   title: Help Wanted API
   termsOfService: 'http://swagger.io/terms/'
@@ -34,7 +33,7 @@ schemes:
 consumes:
   - application/json
 produces:
-  - application/json  
+  - application/json
 paths:
   '/seller/{username}/projects/':
     parameters:
@@ -54,7 +53,7 @@ paths:
         '200':
           description: TODO
       security:
-        - petstore_auth:
+        - helpwanted_auth:
             - 'write:projects'
             - 'bid:projects'
     post:
@@ -74,7 +73,7 @@ paths:
         '405':
           description: Invalid input
       security:
-        - petstore_auth:
+        - helpwanted_auth:
             - 'write:projects'
             - 'bid:projects'
   '/seller/{username}/projects/{projectId}':
@@ -89,6 +88,7 @@ paths:
         description: 'A seller''s existing project '
         required: true
         type: string
+        format: guid
     put:
       tags:
         - seller
@@ -98,7 +98,7 @@ paths:
       parameters:
         - in: body
           name: body
-          description: Project object that needs to be added to the store
+          description: Project description that needs to be updated
           required: true
           schema:
             $ref: '#/definitions/Project'
@@ -110,14 +110,14 @@ paths:
         '405':
           description: Validation exception
       security:
-        - petstore_auth:
+        - helpwanted_auth:
             - 'write:projects'
             - 'bid:projects'
     delete:
       tags:
         - seller
       summary: Delete an existing seller's project
-      description: Delete an existing seller's project if project was not published
+      description: Delete an existing seller's project if project hidden or finished without bids
       operationId: deleteSellerProject
       parameters:
         - name: username
@@ -130,13 +130,14 @@ paths:
           description: A seller's existing project
           required: true
           type: string
+          format: guid
       responses:
         '400':
           description: Invalid ID supplied
         '404':
           description: Project not found
       security:
-        - petstore_auth:
+        - helpwanted_auth:
             - 'write:projects'
             - 'bid:projects'
   /market/projects:
@@ -172,10 +173,10 @@ paths:
         '400':
           description: Invalid status value
       security:
-        - petstore_auth:
+        - helpwanted_auth:
             - 'write:projects'
             - 'bid:projects'
-  /market/projects/{projectId}:
+  '/market/projects/{projectId}':
     get:
       tags:
         - market
@@ -187,17 +188,17 @@ paths:
           in: path
           description: ID of project to return
           required: true
-          type: integer
-          format: int64
+          type: string
+          format: guid
       responses:
         '200':
           description: successful operation
           schema:
-            $ref: '#/definitions/Project'
+            $ref: '#/definitions/ProjectDetail'
         '400':
           description: Invalid ID supplied
         '404':
-          description: Pet not found
+          description: Project not found on market
       security:
         - api_key: []
   '/seller/{username}/projects/{projectId}/images':
@@ -219,10 +220,10 @@ paths:
           type: string
         - name: projectId
           in: path
-          description: ID of pet to update
+          description: ID of project to update
           required: true
-          type: integer
-          format: int64
+          type: string
+          format: guid
         - name: additionalMetadata
           in: formData
           description: Additional data to pass to server
@@ -239,7 +240,7 @@ paths:
           schema:
             $ref: '#/definitions/ApiResponse'
       security:
-        - petstore_auth:
+        - helpwanted_auth:
             - 'write:projects'
             - 'bid:projects'
   '/seller/{username}/projects/{projectId}/images/{imageId}':
@@ -263,8 +264,8 @@ paths:
           in: path
           description: ID of project containg image
           required: true
-          type: integer
-          format: int64
+          type: string
+          format: guid
         - name: imageId
           in: path
           description: image ID
@@ -286,26 +287,27 @@ paths:
           schema:
             $ref: '#/definitions/ApiResponse'
       security:
-        - petstore_auth:
+        - helpwanted_auth:
             - 'write:projects'
             - 'bid:projects'
-  '/buyer/{username}/projects/{orderId}':
+  '/buyer/{username}/projects/{projectId}':
     parameters:
       - name: username
         in: path
         description: The buyer's username
         required: true
         type: string
-      - name: orderId
+      - name: projectId
         in: path
         description: an existing project ID
         required: true
         type: string
+        format: guid
     get:
       tags:
         - buyer
       summary: Get buyers bid status in specified project
-      description: ''
+      description: 'Buyers may track projects where they bid or just bookmarked'
       operationId: getBuyerProject
       responses:
         '200':
@@ -319,7 +321,7 @@ paths:
     post:
       tags:
         - buyer
-      summary: Bookmark project
+      summary: Bookmark a market project
       description: ''
       operationId: bookmarkBuyerProject
       responses:
@@ -334,11 +336,18 @@ paths:
     put:
       tags:
         - buyer
-      summary: Bid on project
+      summary: Bid on bookmarked project
       description: ''
       operationId: bidBuyerProject
       produces:
         - application/json
+      parameters:
+        - in: body
+          name: body
+          description: Bid on project
+          required: true
+          schema:
+            $ref: '#/definitions/Bid'
       responses:
         '200':
           description: successful operation
@@ -353,14 +362,14 @@ paths:
         - buyer
       summary: Delete not-active project by ID
       description: 'Buyer may delete project without his bid, delivered'
-      operationId: deleteOrder
+      operationId: deleteBuyerProjectBookmark
       responses:
         '400':
           description: Invalid ID supplied
         '404':
           description: Order not found
 securityDefinitions:
-  petstore_auth:
+  helpwanted_auth:
     type: oauth2
     authorizationUrl: 'http://petstore.swagger.io/oauth/dialog'
     flow: implicit
@@ -376,8 +385,15 @@ definitions:
     type: object
     properties:
       id:
-        type: integer
-        format: int64
+        type: string
+        format: guid
+      project:
+        type: string
+        format: guid
+      bidder:
+        type: string
+        format: guid
+        readOnly: true
       quantity:
         type: integer
         format: int32
@@ -391,23 +407,33 @@ definitions:
       pricePerUnit:
         type: number
         format: currency
+      price:
+        type: number
+        format: currency
     xml:
       name: Order
-  ParticipatedProject:
-    type: object
-    properties:
-      id:
-        type: integer
-        format: int64    
   Project:
     type: object
     properties:
       id:
-        type: integer
-        format: int64
-      name:
         type: string
-        example: doggie
+        format: guid
+      title:
+        type: string
+        example: translate text from English to Spanish
+      description:
+        type: string
+        example: big big description
+    xml:
+      name: Project
+  ProjectDetail:
+    properties:
+      id:
+        type: string
+        format: guid
+      title:
+        type: string
+        example: translate text from English to Spanish
       description:
         type: string
         example: big big description
@@ -418,16 +444,16 @@ definitions:
           wrapped: true
         items:
           type: string
-      status:
+      biddingStatus:
         type: string
-        description: Project status
+        description: Project Bidding Status
         enum:
-          - pending
+          - waiting_start
+          - waiting_bids
           - bidding
-          - sold
-          - finished
-    xml:
-      name: Project
+          - pending
+          - winner
+          - no_winner
   ApiResponse:
     type: object
     properties:
